--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -7,9 +7,8 @@ build_requires:
   Test::More: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.62
-distribution_type: module
-dynamic_config: 1
-generated_by: 'Module::Install version 1.04'
+dynamic_config: 0
+generated_by: 'Module::Install version 1.04, CPAN::Meta::Converter version 2.113640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,7 +23,7 @@ requires:
   DateTime: 0
   DateTime::Util::Astro: 0
   Exporter: 0
-  perl: 5.6.0
+  perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
 version: 1.02
