--- a/META.yml
+++ b/META.yml
@@ -3,13 +3,13 @@ abstract: 'Return zodiac for a given date'
 author:
   - 'Maroš Kollár'
 build_requires:
-  ExtUtils::MakeMaker: 6.62
+  ExtUtils::MakeMaker: 6.59
   Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.62
+  ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.04'
+generated_by: 'Module::Install version 1.06'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,9 +22,9 @@ no_index:
     - xt
 requires:
   DateTime: 0
-  DateTime::Util::Astro: 0
+  DateTime::Astro: 0
   Exporter: 0
   perl: 5.6.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.02
+version: 1.03
