--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -1,14 +1,14 @@
 ---
 abstract: 'Return zodiac for a given date'
 author:
-  - 'Maroš Kollár'
+  - 'MaroÅ¡ KollÃ¡r'
 build_requires:
-  ExtUtils::MakeMaker: 6.62
+  ExtUtils::MakeMaker: 6.59
   Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.62
+  ExtUtils::MakeMaker: 0
 dynamic_config: 0
-generated_by: 'Module::Install version 1.04, CPAN::Meta::Converter version 2.113640'
+generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,14 +16,11 @@ meta-spec:
 name: DateTime-Event-Zodiac
 no_index:
   directory:
-    - inc
     - t
-    - xt
+    - inc
 requires:
   DateTime: 0
-  DateTime::Util::Astro: 0
+  DateTime::Astro: 0
   Exporter: 0
   perl: 5.006
-resources:
-  license: http://dev.perl.org/licenses/
-version: 1.02
+version: 1.03
